--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.popularmovies.app.MovieDeatilFragment"
+    tools:context="com.example.android.popularmovies.app.MovieDetailFragment"
     tools:showIn="@layout/activity_movie_deatil">
 
     <TextView
