--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,9 +6,12 @@
     android:layout_alignEnd="@+id/textView"
     android:layout_marginBottom="61dp">
 
-    <ListView
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gridview_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview_movies"/>
-
+        android:stretchMode="columnWidth"
+        android:numColumns="2"
+        />
 </FrameLayout>
+
