--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -1,21 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_movie_deatil"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.popularmovies.app.MovieDetailFragment"
-    tools:showIn="@layout/activity_movie_deatil">
+    >
 
     <TextView
-        android:id="@+id/detail_text"
-        android:text="@string/hello_world"
+        android:text="TextView"
+        android:layout_width="fill_parent"
+        android:layout_height="120dp"
+        android:textSize="30sp"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
+        android:gravity="center"
+        android:id="@+id/movie_title_textview" />
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_below="@id/movie_title_textview"
+        android:layout_alignParentLeft="true"
+        android:padding="5dp"
+        android:adjustViewBounds="true"
+        android:id="@+id/movie_poster_imageview" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/movie_title_textview"
+        android:layout_toRightOf="@id/movie_poster_imageview"
+        android:orientation="vertical">
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textSize="30sp"
+            android:id="@+id/movie_releasedate_textview" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:id="@+id/movie_user_rating_textview" />
+
+    </LinearLayout>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/movie_poster_imageview"
+        android:layout_alignParentLeft="true"
+        android:padding="20dp"
+        android:textSize="15sp"
+        android:id="@+id/movie_user_overview_textview" />
 
 
 </RelativeLayout>
