--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -1,61 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent" >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="fill_parent"
-        android:layout_height="120dp"
-        android:textSize="30sp"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:id="@+id/movie_title_textview" />
+        <TextView
+            android:text="TextView"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/movie_title_height"
+            android:textSize="@dimen/movie_title_text_size"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="#FFFFFF"
+            android:gravity="center"
+            android:id="@+id/movie_title_textview" />
 
-    <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_below="@id/movie_title_textview"
-        android:layout_alignParentLeft="true"
-        android:padding="5dp"
-        android:adjustViewBounds="true"
-        android:id="@+id/movie_poster_imageview" />
+        <ImageView
+            android:layout_width="@dimen/movie_image_width"
+            android:layout_height="@dimen/movie_image_height"
+            android:layout_below="@id/movie_title_textview"
+            android:layout_alignParentLeft="true"
+            android:padding="@dimen/movie_image_padding"
+            android:adjustViewBounds="true"
+            android:id="@+id/movie_poster_imageview" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/movie_title_textview"
-        android:layout_toRightOf="@id/movie_poster_imageview"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/movie_title_textview"
+            android:layout_toRightOf="@id/movie_poster_imageview"
+            android:orientation="vertical">
+
+            <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/movie_relesedate_padding"
+                android:textSize="@dimen/movie_release_date_text_size"
+                android:id="@+id/movie_releasedate_textview" />
+
+            <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/movie_rating_padding"
+                android:textSize="@dimen/movie_rating_text_size"
+                android:id="@+id/movie_user_rating_textview" />
+
+        </LinearLayout>
 
         <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textSize="30sp"
-            android:id="@+id/movie_releasedate_textview" />
-
-        <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:id="@+id/movie_user_rating_textview" />
-
-    </LinearLayout>
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/movie_poster_imageview"
-        android:layout_alignParentLeft="true"
-        android:padding="20dp"
-        android:textSize="15sp"
-        android:id="@+id/movie_user_overview_textview" />
+            android:layout_below="@id/movie_poster_imageview"
+            android:layout_alignParentLeft="true"
+            android:padding="@dimen/movie_overview_padding"
+            android:textSize="@dimen/movie_overview_text_size"
+            android:id="@+id/movie_user_overview_textview" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
