--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,16 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentBottom="true"
-    android:layout_alignRight="@+id/textView"
-    android:layout_alignEnd="@+id/textView">
+    android:layout_height="match_parent">
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridview_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="@integer/grid_view_num_columns"
-        />
+        android:numColumns="@integer/grid_view_num_columns"/>
 
 </FrameLayout>
-
