--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -1,66 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <RelativeLayout
+    android:layout_height="match_parent">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:orientation="vertical"
+        android:id="@+id/moview_linear_layout">
 
-        <TextView
-            android:text="TextView"
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/movie_title_height"
-            android:textSize="@dimen/movie_title_text_size"
-            android:background="@color/colorPrimaryDark"
-            android:textColor="#FFFFFF"
-            android:gravity="center"
-            android:id="@+id/movie_title_textview" />
+        <android.support.v7.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            style="@style/CardViewBaseStyle">
 
-        <ImageView
-            android:layout_width="@dimen/movie_image_width"
-            android:layout_height="@dimen/movie_image_height"
-            android:layout_below="@id/movie_title_textview"
-            android:layout_alignParentLeft="true"
-            android:padding="@dimen/movie_image_padding"
-            android:adjustViewBounds="true"
-            android:id="@+id/movie_poster_imageview" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movie_title_textview"
-            android:layout_toRightOf="@id/movie_poster_imageview"
-            android:orientation="vertical">
+                <TextView
+                    android:text="TextView"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/movie_title_height"
+                    android:textSize="@dimen/movie_title_text_size"
+                    android:background="@color/colorPrimaryDark"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:id="@+id/movie_title_textview" />
+
+                <ImageView
+                    android:layout_width="@dimen/movie_image_width"
+                    android:layout_height="@dimen/movie_image_height"
+                    android:layout_below="@id/movie_title_textview"
+                    android:layout_alignParentLeft="true"
+                    android:padding="@dimen/movie_image_padding"
+                    android:adjustViewBounds="true"
+                    android:id="@+id/movie_poster_imageview" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/movie_title_textview"
+                    android:layout_toRightOf="@id/movie_poster_imageview"
+                    android:orientation="vertical">
+                    <TextView
+                        android:text="TextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/movie_relesedate_padding"
+                        android:textSize="@dimen/movie_release_date_text_size"
+                        android:id="@+id/movie_releasedate_textview" />
+                    <TextView
+                        android:text="TextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/movie_rating_padding"
+                        android:textSize="@dimen/movie_rating_text_size"
+                        android:id="@+id/movie_user_rating_textview" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            style="@style/CardViewBaseStyle">
 
             <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/movie_relesedate_padding"
-                android:textSize="@dimen/movie_release_date_text_size"
-                android:id="@+id/movie_releasedate_textview" />
+                android:layout_below="@id/movie_poster_imageview"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/movie_overview_padding"
+                android:textSize="@dimen/movie_overview_text_size"
+                android:id="@+id/movie_user_overview_textview" />
 
-            <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/movie_rating_padding"
-                android:textSize="@dimen/movie_rating_text_size"
-                android:id="@+id/movie_user_rating_textview" />
+        </android.support.v7.widget.CardView>
 
-        </LinearLayout>
+    </LinearLayout>
 
-        <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movie_poster_imageview"
-            android:layout_alignParentLeft="true"
-            android:padding="@dimen/movie_overview_padding"
-            android:textSize="@dimen/movie_overview_text_size"
-            android:id="@+id/movie_user_overview_textview" />
-
-
-    </RelativeLayout>
 </ScrollView>
