--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -3,9 +3,4 @@
     android:id="@+id/movie_poster_imageview"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:adjustViewBounds="true"
-    />
-
-<!--
-    android:adjustViewBounds="true"
--->
+    android:adjustViewBounds="true" />
