--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -45,6 +46,7 @@
                     android:layout_below="@id/movie_title_textview"
                     android:layout_toRightOf="@id/movie_poster_imageview"
                     android:orientation="vertical">
+
                     <TextView
                         android:text="TextView"
                         android:layout_width="wrap_content"
@@ -52,6 +54,7 @@
                         android:padding="@dimen/movie_relesedate_padding"
                         android:textSize="@dimen/movie_release_date_text_size"
                         android:id="@+id/movie_releasedate_textview" />
+
                     <TextView
                         android:text="TextView"
                         android:layout_width="wrap_content"
@@ -59,6 +62,17 @@
                         android:padding="@dimen/movie_rating_padding"
                         android:textSize="@dimen/movie_rating_text_size"
                         android:id="@+id/movie_user_rating_textview" />
+
+                    <ImageButton
+                        android:id="@+id/favorite_button"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:src="@android:drawable/btn_star_big_off"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:background="#00ffffff" />
+
+
                 </LinearLayout>
 
             </RelativeLayout>
