--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -72,30 +72,19 @@
                         android:layout_centerHorizontal="true"
                         android:background="#00ffffff" />
 
-
                 </LinearLayout>
 
+                <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/movie_poster_imageview"
+                    android:layout_alignParentLeft="true"
+                    android:padding="@dimen/movie_overview_padding"
+                    android:textSize="@dimen/movie_overview_text_size"
+                    android:id="@+id/movie_user_overview_textview" />
+
             </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            style="@style/CardViewBaseStyle">
-
-            <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/movie_poster_imageview"
-                android:layout_alignParentLeft="true"
-                android:padding="@dimen/movie_overview_padding"
-                android:textSize="@dimen/movie_overview_text_size"
-                android:id="@+id/movie_user_overview_textview" />
 
         </android.support.v7.widget.CardView>
 
@@ -103,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/trailer_linear_layout"
-            android:orientation="horizontal">
+            android:orientation="vertical">
         </LinearLayout>
 
         <LinearLayout
