--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="185dp"
+    android:layout_height="wrap_content">
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!--
-        //TODO Find out why it is necessary to do this for fitting image
-    -->
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/movie_poster_imageview"
-        android:layout_width="185dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        android:adjustViewBounds="true" />
-</FrameLayout>
+        android:adjustViewBounds="true"/>
+
+</android.support.v7.widget.CardView>
