--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:text="TextView"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        android:padding="15dp"
-        android:id="@+id/movie_trailer_title_textview" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/trailer_imageview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:padding="15dp"/>
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:padding="15dp"
+            android:id="@+id/movie_trailer_title_textview" />
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/trailer_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:padding="15dp"/>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
+
+
