--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -77,6 +77,13 @@
                 android:scrollbars="vertical"
                 android:id="@+id/listview_trailers"/>
 
+            <android.support.v7.widget.RecyclerView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:id="@+id/listview_reviews"/>
+
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
