--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
-            android:textSize="26sp"
+            android:textSize="@dimen/movie_review_title_text_size"
             android:textStyle="bold"
             android:id="@+id/review_author_textview" />
 
@@ -24,7 +24,7 @@
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="@dimen/movie_review_content_text_size"
             android:padding="10dp"
             android:fontFamily="sans-serif-condensed"
             android:id="@+id/review_content_textview" />
