--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,13 +5,18 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="movie_title_height">80dp</dimen>
     <dimen name="movie_title_text_size">25sp</dimen>
+    <dimen name="movie_image_grid_width">185dp</dimen>
     <dimen name="movie_image_width">128dp</dimen>
     <dimen name="movie_image_height">190dp</dimen>
+    <dimen name="movie_image_title_text_size">26sp</dimen>
+    <dimen name="movie_release_date_text_size">25sp</dimen>
+    <dimen name="movie_overview_text_size">15sp</dimen>
+    <dimen name="movie_review_title_text_size">26sp</dimen>
+    <dimen name="movie_review_content_text_size">15sp</dimen>
     <dimen name="movie_image_padding">10dp</dimen>
     <dimen name="movie_relesedate_padding">5dp</dimen>
-    <dimen name="movie_release_date_text_size">25sp</dimen>
     <dimen name="movie_rating_padding">5dp</dimen>
     <dimen name="movie_rating_text_size">15sp</dimen>
     <dimen name="movie_overview_padding">10dp</dimen>
-    <dimen name="movie_overview_text_size">15sp</dimen>
+
 </resources>
