Improve the movie detail fragment with card views

--- a/app/src/main/res/layout-sw600dp/fragment_movie_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_movie_detail.xml
@@ -26,64 +26,13 @@
                 android:adjustViewBounds="true"
                 android:id="@+id/movie_poster_imageview" />
 
-            <TextView
-                android:text="TextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="@dimen/movie_image_title_text_size"
-                android:textStyle="bold"
-                android:padding="5dp"
-                android:id="@+id/movie_title_textview" />
+            <include layout="@layout/movie_summary_cardview"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="horizontal">
+            <include layout="@layout/movie_overview_cardview"/>
 
-                <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/movie_release_date_text_size"
-                    android:id="@+id/movie_releasedate_textview" />
+            <include layout="@layout/movie_trailer_cardview"/>
 
-                <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="@dimen/movie_rating_text_size"
-                    android:id="@+id/movie_user_rating_textview" />
-
-            </LinearLayout>
-
-            <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="@dimen/movie_overview_text_size"
-                android:id="@+id/movie_user_overview_textview" />
-
-            <android.support.v7.widget.RecyclerView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:id="@+id/listview_trailers"/>
-
-            <android.support.v7.widget.RecyclerView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:id="@+id/listview_reviews"/>
-
+            <include layout="@layout/movie_review_cardview"/>
 
         </LinearLayout>
 
