--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
@@ -21,68 +22,18 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
+                android:layout_weight="2"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
                 android:id="@+id/movie_poster_imageview" />
 
-            <TextView
-                android:text="TextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:padding="5dp"
-                android:id="@+id/movie_title_textview" />
+            <include layout="@layout/movie_summary_cardview"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="horizontal">
+            <include layout="@layout/movie_overview_cardview"/>
 
-                <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="20dp"
-                    android:id="@+id/movie_releasedate_textview" />
+            <include layout="@layout/movie_trailer_cardview"/>
 
-                <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="20sp"
-                    android:id="@+id/movie_user_rating_textview" />
-
-            </LinearLayout>
-
-            <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:fontFamily="sans-serif-condensed"
-                android:textAppearance="@android:style/TextAppearance.Large"
-                android:id="@+id/movie_user_overview_textview" />
-
-            <android.support.v7.widget.RecyclerView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:id="@+id/listview_trailers"/>
-
-            <android.support.v7.widget.RecyclerView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:id="@+id/listview_reviews"/>
+            <include layout="@layout/movie_review_cardview"/>
 
         </LinearLayout>
 
@@ -94,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_gravity="center_vertical|start"
+        app:fabSize="mini"
         app:layout_anchor="@id/movie_poster_imageview"
         app:layout_anchorGravity="bottom|end"
         android:src="@android:drawable/btn_star_big_off" />
