--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -2,33 +2,16 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dp"
+    android:layout_width="@dimen/movie_image_trailer_width"
     android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ImageView
+        android:id="@+id/trailer_imageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:padding="5dp"
-            android:id="@+id/movie_trailer_title_textview" />
-
-        <ImageView
-            android:id="@+id/trailer_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
-            android:padding="5dp"/>
-
-    </LinearLayout>
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:padding="5dp"/>
 
 </android.support.v7.widget.CardView>
 
