--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,10 +8,13 @@
     <dimen name="movie_image_grid_width">185dp</dimen>
     <dimen name="movie_image_width">128dp</dimen>
     <dimen name="movie_image_height">190dp</dimen>
+    <dimen name="movie_image_trailer_width">140dp</dimen>
     <dimen name="movie_image_title_text_size">26sp</dimen>
     <dimen name="movie_release_date_text_size">25sp</dimen>
+    <dimen name="movie_summary_title_text_size">25sp</dimen>
+    <dimen name="movie_overview_title_text_size">25sp</dimen>
     <dimen name="movie_overview_text_size">15sp</dimen>
-    <dimen name="movie_review_title_text_size">26sp</dimen>
+    <dimen name="movie_review_title_text_size">20sp</dimen>
     <dimen name="movie_review_content_text_size">15sp</dimen>
     <dimen name="movie_image_padding">10dp</dimen>
     <dimen name="movie_relesedate_padding">5dp</dimen>
