The review card view shows the first few lines and a bottom to expand the text has been created.

--- a/app/src/main/res/values/numbers.xml
+++ b/app/src/main/res/values/numbers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="grid_view_num_columns" type="integer">2</item>
+    <item name="trailer_review_max_lines" type="integer">5</item>
 </resources>
