--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardUseCompatPadding="true"
@@ -20,6 +21,7 @@
             android:fontFamily="sans-serif-condensed"
             android:textSize="@dimen/movie_review_title_text_size"
             android:textStyle="bold"
+            android:maxLines="5"
             android:id="@+id/review_author_textview" />
 
         <TextView
@@ -28,15 +30,29 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/movie_review_content_text_size"
             android:padding="5dp"
+            android:maxLines="@integer/trailer_review_max_lines"
             android:fontFamily="sans-serif-condensed"
             android:id="@+id/review_content_textview" />
 
-        <TextView
-            android:text="TextView"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
-            android:id="@+id/review_url_textview" />
+            android:layout_gravity="right">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:srcCompat="@android:drawable/arrow_down_float"
+                android:id="@+id/review_readmore_button_down" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                card_view:srcCompat="@android:drawable/arrow_up_float"
+                android:id="@+id/review_readmore_button_up" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
